# rflightservice

./: Cargo.toml  README.md  run-docker-postgress.sh  run-docker-psql.sh
flight-contract/: Cargo.toml
flight-contract/src/: lib.rs
flight-dao/: Cargo.toml
flight-dao/src/: lib.rs
flight-migrations/: Cargo.toml
flight-migrations/src/: main.rs
flight-migrations/src/migrations/: mod.rs
flight-service/: Cargo.toml
flight-service/src/: endpoints.rs  main.rs  service.rs
